--- a/etc/yt-dlp.conf
+++ b/etc/yt-dlp.conf
@@ -1,4 +1,7 @@
 -N 8
+--extractor-args "youtubepot-bgutilhttp:base_url=http://127.0.0.1:4416"
+-f "bv*[height<=1080][fps<=60]+ba/best"
+-S vcodec:vp9,res:1080,fps:60,acodec:opus
 --cookies /home/jake/yt-dlp-cookies.txt
 --hls-prefer-native
 --mtime
@@ -10,6 +13,5 @@
 --sub-format=best
 --sponsorblock-remove sponsor
 --remux-video mkv
--S +vcodec:vp9,+acodec:opus,+res:1080,+fps:60
 --merge-output-format mkv
 --output "%(title)s.%(id)s.%(ext)s"
