Updates for Jellyfin since Plex wanted to kill its company

--- a/etc/yt-dlp.conf
+++ b/etc/yt-dlp.conf
@@ -14,4 +14,10 @@
 --sponsorblock-remove sponsor
 --remux-video mkv
 --merge-output-format mkv
+--download-archive "$yt/IDs.db"
+--no-overwrites
+--no-post-overwrites
+--write-info-json
+--write-thumbnail
+--playlist-end 1
 --output "%(title)s.%(id)s.%(ext)s"
