--- a/etc/yt-dlp.conf
+++ b/etc/yt-dlp.conf
@@ -9,7 +9,7 @@
 --embed-thumbnail
 --embed-chapters
 --embed-subs
---sub-lang en
+--sub-lang en,de,pl
 --sub-format=best
 --sponsorblock-remove sponsor
 --remux-video mkv
