--- a/etc/yt-dlp.conf
+++ b/etc/yt-dlp.conf
@@ -1,21 +1,19 @@
 -N 2
 --extractor-args "youtubepot-bgutilhttp:base_url=http://127.0.0.1:4416"
--f "bv*[height<=1080][fps<=60]+ba/best"
--S vcodec:vp9,res:1080,fps:60,acodec:opus
+-f "bv*[height<=1080][fps<=60]+ba/bestvideo+bestaudio/best"
+-S vcodec:h264,res:1080,fps:60,acodec:aac
 --cookies /home/jake/yt-dlp-cookies.txt
+--embed-chapters
+--embed-subs
+--embed-thumbnail
 --hls-prefer-native
 --mtime
 --no-overwrites
---embed-thumbnail
---embed-chapters
---embed-subs
+--no-post-overwrites
+--output "%(title)s.%(id)s.%(ext)s"
+--sponsorblock-mark all
+--sponsorblock-remove sponsor,selfpromo
 --sub-lang en,de,pl
 --sub-format=best
---sponsorblock-remove sponsor
---remux-video mkv
---merge-output-format mkv
---no-overwrites
---no-post-overwrites
 --write-info-json
 --write-thumbnail
---output "%(title)s.%(id)s.%(ext)s"
