--- a/etc/yt-dlp.conf
+++ b/etc/yt-dlp.conf
@@ -2,18 +2,24 @@
 --extractor-args "youtubepot-bgutilhttp:base_url=http://127.0.0.1:4416"
 -f "bv*[height<=1080][fps<=60]+ba/bestvideo+bestaudio/best"
 -S vcodec:h264,res:1080,fps:60,acodec:aac
---cookies /home/jake/yt-dlp-cookies.txt
+--cookies /MEDIA/yt-dlp-cookies.txt
+--convert-subs srt
+--download-archive /MEDIA/IDs.db
 --embed-chapters
+--embed-metadata
 --embed-subs
 --embed-thumbnail
 --hls-prefer-native
+--merge-output-format mkv
 --mtime
 --no-overwrites
 --no-post-overwrites
---output "%(title)s.%(id)s.%(ext)s"
+--playlist-end 1
 --sponsorblock-mark all
 --sponsorblock-remove sponsor,selfpromo
---sub-lang en,de,pl
---sub-format=best
+--sub-lang "en.*,en,de,pl"
+--sub-format "vtt/srt"
 --write-info-json
 --write-thumbnail
+--write-subs
+--write-auto-subs
